# esg-impact

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: Indonesia_data.xlsx  processed.csv  raw.csv  raw.xlsx
notebooks/: data_processing.ipynb
src/: __init__.py
src/data/: scaler.py  utils.py
src/models/: config.py  train.py
