[project]
name = "esg-impact"
version = "0.1.0"
description = "Machine learning analysis of the impact of ESG factors on Tobin’s Q in financial markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
