[project]
name = "esg-impact"
version = "0.1.0"
description = "Machine learning analysis of the impact of ESG factors on Tobin’s Q in financial markets"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "econml>=0.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
