[project]
name = "esg-impact"
version = "0.1.0"
description = "Machine learning analysis of the impact of ESG factors on Tobin’s Q in financial markets"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "econml>=0.15.1",
]

[tool.uv]
default-groups = ["data", "dev", "ci"]

[dependency-groups]
data = [
    "openpyxl>=3.1.5",
]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pydantic>=2.11.2",
]
ci = [
    "pre-commit>=4.2.0",
]

[tool.setuptools.packages]
find = {}

[tool.pycln]
all = true

[tool.isort]
line_length = 100
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 'dynamic'
quote-style = 'double'
indent-style = 'space'
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ['D']  # Select all pydocstyle rules (denoted by 'D') for linting.
ignore=['D100', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107', 'D206', 'D300'] # Exclude some pydocstyle rules
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'    # Allow unused variables when underscore-prefixed
# Exclude a variety of commonly ignored directories
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
]

[tool.ruff.lint.mccabe]
max-complexity = 5  # Flag errors (`C901`) whenever the complexity level exceeds 5.

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.mypy]
install_types = true
no_strict_optional = true
ignore_missing_imports = true
explicit_package_bases = true
